--- a/src/SpecflowEventualConsistency.WebApi/appsettings.json
+++ b/src/SpecflowEventualConsistency.WebApi/appsettings.json
@@ -10,9 +10,9 @@
   "ConnectionStrings": {
     "SpecflowEventual": "User ID=postgres;Password=postgres;Host=specfloweventual.db;Port=5432;Database=SpecflowEventual;Pooling=true;"
   },
-  "RabbitMqSettings": 
+  "RabbitMqSettings":
   {
-    "Hostname": "localhost",
+    "Hostname": "specfloweventual.queue",
     "Port": 5672,
     "Username": "root",
     "Password": "root",
