--- a/src/SpecflowEventualConsistency.Application/SpecflowEventualConsistency.Application.csproj
+++ b/src/SpecflowEventualConsistency.Application/SpecflowEventualConsistency.Application.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\SpecflowEventualConsistency.Infrastructure\SpecflowEventualConsistency.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
