--- a/src/SpecflowEventualConsistency.Infrastructure/SpecflowEventualConsistency.Infrastructure.csproj
+++ b/src/SpecflowEventualConsistency.Infrastructure/SpecflowEventualConsistency.Infrastructure.csproj
@@ -7,6 +7,11 @@
     <ItemGroup>
       <PackageReference Include="EasyNetQ" Version="6.3.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.6" />
     </ItemGroup>
 
     <ItemGroup>
