--- a/src/SpecflowEventualConsistency.Specs/SpecflowEventualConsistency.Specs.csproj
+++ b/src/SpecflowEventualConsistency.Specs/SpecflowEventualConsistency.Specs.csproj
@@ -9,6 +9,8 @@
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="5.10.3" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+        <PackageReference Include="Polly" Version="7.2.2" />
+        <PackageReference Include="Refit" Version="6.0.38" />
         <PackageReference Include="SpecFlow.xUnit" Version="3.8.14" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -19,6 +21,10 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SpecflowEventualConsistency.Domain\SpecflowEventualConsistency.Domain.csproj" />
     </ItemGroup>
 
 </Project>
