--- a/src/SpecflowEventualConsistency.Worker/SpecflowEventualConsistency.Worker.csproj
+++ b/src/SpecflowEventualConsistency.Worker/SpecflowEventualConsistency.Worker.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="EasyNetQ" Version="6.3.1" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.6" />
     </ItemGroup>
