--- a/src/SpecflowEventualConsistency.Specs/SpecflowEventualConsistency.Specs.csproj
+++ b/src/SpecflowEventualConsistency.Specs/SpecflowEventualConsistency.Specs.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
         <PackageReference Include="Polly" Version="7.2.2" />
         <PackageReference Include="Refit" Version="6.0.38" />
+        <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.8.35" />
         <PackageReference Include="SpecFlow.xUnit" Version="3.8.14" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
